--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+* {
+    box-sizing: border-box;
+}
 html {
     scroll-behavior: smooth;
 }
@@ -12,6 +15,11 @@ body {
     min-height: 100vh;
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #4d2323;
 }
 .header {
     height: 50px;
@@ -32,10 +40,57 @@ body {
 .nav-menu__item:hover {
     cursor: pointer;
 }
-
 .nav-menu-link {
     padding: 0 20px;
     text-decoration: none;
     color: whitesmoke;
     line-height: 50px;
+}
+.main {
+    padding: 0;
+    margin: 0;
+}
+.main-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.section {
+    width: 50%;
+    border-bottom: 5px solid lightgrey;
+}
+.section-title,
+.profile-prof {
+    font-size: 20px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    color: #829985;
+}
+.profile {
+    display: flex;
+    width: 100%;
+    border-bottom: 10px solid lightgray;
+}
+.profile-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+}
+.profile-image {
+    width: 200px;
+}
+.profile-title {
+    font-size: 32px;
+}
+.profile-prof {
+    letter-spacing: 0;
+}
+
+@media (max-width: 768px) {
+    .section {
+        width: 100%;
+    }
 }
