--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body {
     justify-content: space-between;
 }
 .section {
+    padding: 0 20px;
     width: 48%;
     border-bottom: 5px solid lightgrey;
 }
@@ -90,7 +91,7 @@ body {
 }
 
 .footer {
-    padding: 10px 0;
+    padding: 10px 20px;
     background-color: gray;
 }
 .footer-container {
@@ -113,6 +114,7 @@ body {
     width: 50%;
 }
 .footer-year {
+    padding: 0 10px;
     color: whitesmoke;
 }
 .footer-git-link {
